--- a/.env
+++ b/.env
@@ -2,6 +2,6 @@ DB_USER=myuser
 DB_PASSWORD=password
 DB_ROOT_PASSWORD=password
 DB_NAME=BlogDB
-DB_HOST=mysql
+DB_HOST=mysql_service
 
 PHPMYADMIN_PORT=8081
