--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
 services:
-  mysql:
+  mysql_service:
     image: mysql:8.0
     container_name: mysql_db
     restart: unless-stopped
@@ -18,29 +18,33 @@ services:
     container_name: phpmyadmin
     restart: unless-stopped
     environment:
-      PMA_HOST: ${DB_HOST}
+      PMA_HOST: mysql_service
       PMA_USER: ${DB_USER}
       PMA_PASSWORD: ${DB_PASSWORD}
     ports:
       - "${PHPMYADMIN_PORT}:80"
     depends_on:
-      - mysql
+      - mysql_service
 
   web:
     build: .
     volumes:
       - ./app:/app
-    command: [ "uvicorn", "blog.asgi:application", "--host", "0.0.0.0", "--port", "8000", "--reload" ]
+    command: sh -c "
+      python manage.py makemigrations &&
+      python manage.py migrate &&
+      uvicorn blog.asgi:application --host 0.0.0.0 --port 8000 --reload
+      "
     container_name: django
     ports:
       - "8000:8000"
     depends_on:
-      - mysql
+      - mysql_service
     environment:
-      DB_HOST: mysql
+      DB_HOST: ${DB_HOST}
       DB_NAME: ${DB_NAME}
       DB_USER: ${DB_USER}
-      DB_PASS: ${DB_PASSWORD}
+      DB_PASSWORD: ${DB_PASSWORD}
 
 volumes:
   mysqldata:
